# how-to-scale-ml-inference

./: .gitignore  README.md
docker-compose/: Makefile  ml_inference_pipeline.yml  prometheus_and_grafana.yml
docker-compose/prometheus/: prometheus.yml
fraud-detector/: Makefile  pyproject.toml
fraud-detector/src/: config.py  main.py  predictor.py
latency-logger/: Dockerfile  Makefile  pyproject.toml
latency-logger/src/: config.py  main.py
transaction-generator/: Dockerfile  Makefile  pyproject.toml
transaction-generator/src/: config.py  frontend.py  main.py  produce_transaction.py  transaction.py
